<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/newPostFragment"
        android:icon="@drawable/post_icon"
        android:title="@string/post" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/notification_icon"
        android:title="@string/notification" />

    <item
        android:id="@+id/jobFragment"
        android:icon="@drawable/job_icon"
        android:title="@string/job" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
</menu>