<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddJobFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            app:icon="@drawable/baseline_close"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragmentName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/inter_light"
            android:gravity="center"
            android:text="@string/add_job"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/close" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            app:cornerRadius="1000dp"
            app:icon="@drawable/baseline_check"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="#2C000000" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/jobName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job" />

    <EditText
        android:id="@+id/jobPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/position" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/jobStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/start" />

        <TextView
            android:id="@+id/jobFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/finish" />
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/link" />
</LinearLayout>