<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/login"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/askAccount"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="24dp"
            android:minHeight="0dp"
            android:padding="4dp"
            android:text="@string/are_you_have_not_account"
            android:textColor="#2196F3"
            android:textSize="12sp"
            android:textStyle="italic"
            app:cornerRadius="4dp"
            app:rippleColor="#3C03A9F4" />

    </LinearLayout>


</FrameLayout>