<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/login"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/name"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/groupImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="24dp"
                android:minHeight="24dp"
                android:padding="4dp"
                android:text="@string/clear_image"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cameraBtn"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="24dp"
                android:minHeight="24dp"
                android:padding="4dp"
                app:icon="@drawable/baseline_camera_alt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/galleryBtn"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="24dp"
                android:minHeight="24dp"
                android:padding="4dp"
                app:icon="@drawable/ic_baseline_image" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/askAccount"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="24dp"
            android:minHeight="0dp"
            android:padding="4dp"
            android:text="@string/are_you_have_an_account"
            android:textColor="#2196F3"
            android:textSize="12sp"
            android:textStyle="italic"
            app:cornerRadius="4dp"
            app:rippleColor="#3C03A9F4" />

    </LinearLayout>

</FrameLayout>