<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/authorAvatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/author_avatar"
        android:src="@drawable/logo_nework"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="@id/authorAvatar"
        app:layout_constraintStart_toEndOf="@id/authorAvatar"
        app:layout_constraintTop_toTopOf="@id/authorAvatar">

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/philosopher_regular"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coordination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/author"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/coordination"
            android:textColor="#676666"
            android:textSize="12sp" />
    </RelativeLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/itemSettings"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/item_settings"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="2dp"
        app:cornerRadius="2dp"
        app:icon="@drawable/baseline_more_vert"
        app:iconSize="24dp"
        app:iconTint="#BDBDBD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@android:color/transparent"
        tools:minHeight="48dp"
        tools:minWidth="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>