<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/envHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00BCD4"
    android:gravity="center"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingHorizontal="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/envHeaderImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="1dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="1dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="11sp" />
    </LinearLayout>


</LinearLayout>